The zoom buttons were not showing Fixed small bug in legend-panel.css

--- a/src/main/webapp/modules/legend-panel.css
+++ b/src/main/webapp/modules/legend-panel.css
@@ -16,7 +16,8 @@ table.layer_legend {
 }
 
 table.layer_legend td {
-	padding-right: 10px background-color: #fff;
+	padding-right: 10px;
+    background-color: #fff;
 }
 
 .legend_header {
